--- a/config.toml
+++ b/config.toml
@@ -34,12 +34,13 @@ weight                 = -100
 identifier             = "code"
 url                    = "/code/"
 
+
 [params]
-include_rss            = true                        # include RSS <link> tag in <head> and show RSS icon
+include_rss            = false                        # include RSS <link> tag in <head> and show RSS icon
 latestpostscount       = 5                           # how many posts to display on the home page
 i18n_flags             = false                       # whether to display small country flags for available translations
 author                 = "John A. Bernau"
-cachebuster            = true                        # add the current unix timestamp in query string for cache busting css assets
+cachebuster            = true      # add the current unix timestamp in query string for cache busting css assets
 dateform               = "Jan 2, 2006"
 dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
 description            = "Don't panic"
