--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ theme = "cocoa-hugo-theme"
 author              = "John A. Bernau"
 title               = "John A. Bernau"
 pygmentsuseclasses  = true
-disqusshortname     = "cocoaexamplesite" # Comment out to disable Disqus.
+#disqusshortname     = "cocoaexamplesite" # Comment out to disable Disqus.
 pluralizelisttitles = false
 googleAnalytics     = ""
 
@@ -36,9 +36,9 @@ url                    = "/code/"
 
 
 [params]
-include_rss            = false                        # include RSS <link> tag in <head> and show RSS icon
-latestpostscount       = 5                           # how many posts to display on the home page
-i18n_flags             = false                       # whether to display small country flags for available translations
+include_rss            = false   # include RSS <link> tag in <head> and show RSS icon
+latestpostscount       = 5       # how many posts to display on the home page
+i18n_flags             = false   # whether to display small country flags for available translations
 author                 = "John A. Bernau"
 cachebuster            = true      # add the current unix timestamp in query string for cache busting css assets
 dateform               = "Jan 2, 2006"
