--- a/config.toml
+++ b/config.toml
@@ -65,7 +65,7 @@ github                 = "https://github.com/johnbernau"
 instagram              = ""
 px500                  = ""
 lang                   = "en"
-linkedin               = "/https://www.linkedin.com/in/john-bernau-b384a9153/"
+linkedin               = "https://www.linkedin.com/in/john-bernau-b384a9153/"
 noshowreadtime         = true     # if true, don't show "<x> minutes read" in posts
 selfintro              = "PhD Candidate, Sociology"    # appears in the site header when set to a non-empty string
 twitter                = ""
