update for google paper

--- a/config.toml
+++ b/config.toml
@@ -51,7 +51,7 @@ url                    = "/about/"
 name                   = "CV"
 weight                 = 6
 identifier             = "cv"
-url                    = "/img/Bernau_CV_2018.pdf"
+url                    = "/img/Bernau_CV.pdf"
 
 
 
